--- a/movie_rating/package.json
+++ b/movie_rating/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "env-cmd": "^10.1.0",
     "gravatar": "^1.8.2",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
@@ -22,7 +23,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": " PORT=3001 react-scripts start",
+    "start": " env-cmd -f ./.env.local react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
